sand-macros/tests/cases/fail_sand_storage_tuple_struct.rs
use sand_macros::SandStorage;

#[derive(SandStorage)]
#[sand(storage = "test:data", root = "root")]
pub struct BadSchema(i32, String);

fn main() {}
